--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.1",
     "hbs": "^4.0.1",
     "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "socket.io": "^2.0.4",
     "uniqid": "^4.1.1"
   },
